# cmudict-fast-with-getall

./: Cargo.toml
src/: lib.rs
