[package]
name = "cmudict-fast-custom-getall"
edition = "2018"
version = "0.8.0"
authors = [
    "Benjamin Hinchliff <benjamin.hinchiff@gmail.com>",
    "Paul Woolcock <paul@woolcock.us>",
    "David Fryd <david@fryd.com>"
]
# repository = "https://github.com/BenjaminHinchliff/cmudict-fast.git"
# homepage = "https://github.com/BenjaminHinchliff/cmudict-fast"
license = "MIT/Apache-2.0"
# documentation = "https://docs.rs/cmudict-fast"
description = """
A slightly updated fork of the library for using the CMUSphinx
pronunciation dictionary (includes a getall method).
"""
readme = "README.md"
keywords = ["cmudict"]
categories = ["parser-implementations"]
exclude = [
    ".github/**/*"
]

[features]
serialization = ["serde"]

[dependencies]
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
